--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "fibers": "^4.0.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass": "^1.23.7",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "style-resources-loader": "^1.3.3"
   }
 }
